k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: cpouthier/yolo-backend:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: model-storage
              mountPath: /app/models
            - name: temp-storage
              mountPath: /tmp
      volumes:
        - name: model-storage
          persistentVolumeClaim:
            claimName: yolo-model-pvc
        - name: temp-storage
          emptyDir: {}
