k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yolo-ingress
spec:
  rules:
    - host: pouthier.fr
      http:
        paths:
          - path: /yolo/api/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /yolo/
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8501
